--- a/index.html
+++ b/index.html
@@ -128,6 +128,12 @@
           </div>
         </div>
       </div>
+      <p>
+        <a href="https://github.com/plaerke/weather-app" target="_blank">
+          Open-source code
+        </a>
+        by Pernille Lærke Munk-Hansen
+      </p>
     </div>
 
     <script src="src/script.js"></script>
