Styled GitHub link

--- a/index.html
+++ b/index.html
@@ -128,10 +128,10 @@
           </div>
         </div>
       </div>
-      <p>
-        <a href="https://github.com/plaerke/weather-app" target="_blank">
-          Open-source code
-        </a>
+      <p class="code-link">
+        <a href="https://github.com/plaerke/weather-app" target="_blank"
+          >Open-source code</a
+        >
         by Pernille Lærke Munk-Hansen
       </p>
     </div>
