--- a/index.html
+++ b/index.html
@@ -55,7 +55,14 @@
             </div>
             <div class="col-5">
               <div class="row">
-                <div class="col-5 weather-icon">⛅️</div>
+                <div class="col-5 weather-icon">
+                  <img
+                    src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
+                    alt="weather icon"
+                    id="icon"
+                    width="110"
+                  />
+                </div>
                 <div class="col-7 temp-wind">
                   <div class="row">
                     <span class="current-temperature">
