Added temperature conversion and changed current-time function

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                       <span class="units">
                         <a
                           href="#"
-                          class="celsius-temperature"
+                          class="celsius-temperature active"
                           id="celsius-link"
                           >°C
                         </a>
@@ -92,9 +92,7 @@
               </div>
             </div>
           </div>
-          <div class="date-time" id="current-time">
-            Current date and time of search
-          </div>
+          <div class="date-time" id="current-time"></div>
           <hr />
           <br />
           <div class="next-four-days">
