Updated general design

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               </div>
               <div class="col-3">
                 <button class="search-button current-location-button">
-                  Current location
+                  Find current location
                 </button>
               </div>
             </div>
@@ -92,43 +92,60 @@
               </div>
             </div>
           </div>
-          <div class="date-time" id="current-time"></div>
-          <hr />
-          <br />
-          <div class="next-four-days">
-            <h3><em> The next 4 days </em></h3>
+          <div class="forecast">
             <div class="row">
-              <div class="col-3">
+              <div class="col-2 forecast-boxes">
                 <div class="next-days">
-                  <h4>DAY 1</h4>
-                  <div class="next-days-weather-icon">Weather icon</div>
-                  <strong> High temp</strong> Low temp
+                  <h4>Mon</h4>
+                  <div class="next-days-weather-icon">⛅️</div>
+                  <strong class="high-temp"> 13°</strong>
+                  <span class="low-temp"> 8°</span>
                 </div>
               </div>
-              <div class="col-3">
+              <div class="col-2 forecast-boxes">
                 <div class="next-days">
-                  <h4>DAY 2</h4>
-                  <div class="next-days-weather-icon">Weather icon</div>
-                  <strong> High temp</strong> Low temp
+                  <h4>Tue</h4>
+                  <div class="next-days-weather-icon">☀️</div>
+                  <strong class="high-temp"> 13°</strong>
+                  <span class="low-temp"> 8°</span>
                 </div>
               </div>
-              <div class="col-3">
+              <div class="col-2 forecast-boxes">
                 <div class="next-days">
-                  <h4>DAY 3</h4>
-                  <div class="next-days-weather-icon">Weather icon</div>
-                  <strong> High temp</strong> Low temp
+                  <h4>Wed</h4>
+                  <div class="next-days-weather-icon">🌥</div>
+                  <strong class="high-temp"> 13°</strong>
+                  <span class="low-temp"> 8°</span>
                 </div>
               </div>
-              <div class="col-3">
+              <div class="col-2 forecast-boxes">
                 <div class="next-days">
-                  <h4>DAY 4</h4>
-                  <div class="next-days-weather-icon">Weather icon</div>
-                  <strong> High temp</strong> Low temp
+                  <h4>Thu</h4>
+                  <div class="next-days-weather-icon">🌤</div>
+                  <strong class="high-temp"> 13°</strong>
+                  <span class="low-temp"> 8°</span>
+                </div>
+              </div>
+              <div class="col-2 forecast-boxes">
+                <div class="next-days">
+                  <h4>Fri</h4>
+                  <div class="next-days-weather-icon">☁️</div>
+                  <strong class="high-temp"> 13°</strong>
+                  <span class="low-temp"> 8°</span>
+                </div>
+              </div>
+              <div class="col-2 forecast-boxes">
+                <div class="next-days">
+                  <h4>Sat</h4>
+                  <div class="next-days-weather-icon">🌤</div>
+                  <strong class="high-temp"> 13°</strong>
+                  <span class="low-temp"> 8°</span>
                 </div>
               </div>
             </div>
           </div>
         </div>
+        <div class="date-time" id="current-time"></div>
       </div>
       <p class="code-link">
         <a href="https://github.com/plaerke/weather-app" target="_blank"
