--- a/index.html
+++ b/index.html
@@ -148,7 +148,10 @@
         <div class="date-time" id="current-time"></div>
       </div>
       <p class="code-link">
-        <a href="https://github.com/plaerke/weather-app" target="_blank"
+        <a
+          href="https://github.com/plaerke/weather-app"
+          target="_blank"
+          class="code-link-github"
           >Open-source code</a
         >
         by Pernille Lærke Munk-Hansen
