Prepped HTML forecast

--- a/index.html
+++ b/index.html
@@ -97,47 +97,11 @@
               <div class="col-2 forecast-boxes">
                 <div class="next-days">
                   <h4>Mon</h4>
-                  <div class="next-days-weather-icon">⛅️</div>
-                  <strong class="high-temp"> 13°</strong>
-                  <span class="low-temp"> 8°</span>
-                </div>
-              </div>
-              <div class="col-2 forecast-boxes">
-                <div class="next-days">
-                  <h4>Tue</h4>
-                  <div class="next-days-weather-icon">☀️</div>
-                  <strong class="high-temp"> 13°</strong>
-                  <span class="low-temp"> 8°</span>
-                </div>
-              </div>
-              <div class="col-2 forecast-boxes">
-                <div class="next-days">
-                  <h4>Wed</h4>
-                  <div class="next-days-weather-icon">🌥</div>
-                  <strong class="high-temp"> 13°</strong>
-                  <span class="low-temp"> 8°</span>
-                </div>
-              </div>
-              <div class="col-2 forecast-boxes">
-                <div class="next-days">
-                  <h4>Thu</h4>
-                  <div class="next-days-weather-icon">🌤</div>
-                  <strong class="high-temp"> 13°</strong>
-                  <span class="low-temp"> 8°</span>
-                </div>
-              </div>
-              <div class="col-2 forecast-boxes">
-                <div class="next-days">
-                  <h4>Fri</h4>
-                  <div class="next-days-weather-icon">☁️</div>
-                  <strong class="high-temp"> 13°</strong>
-                  <span class="low-temp"> 8°</span>
-                </div>
-              </div>
-              <div class="col-2 forecast-boxes">
-                <div class="next-days">
-                  <h4>Sat</h4>
-                  <div class="next-days-weather-icon">🌤</div>
+                  <img
+                    src="http://openweathermap.org/img/wn/50d@2x.png"
+                    alt=""
+                    width="70"
+                  />
                   <strong class="high-temp"> 13°</strong>
                   <span class="low-temp"> 8°</span>
                 </div>
