Moved Forecast HTML into JS loop function

--- a/index.html
+++ b/index.html
@@ -92,22 +92,7 @@
               </div>
             </div>
           </div>
-          <div class="forecast">
-            <div class="row">
-              <div class="col-2 forecast-boxes">
-                <div class="next-days">
-                  <h4>Mon</h4>
-                  <img
-                    src="http://openweathermap.org/img/wn/50d@2x.png"
-                    alt=""
-                    width="70"
-                  />
-                  <strong class="high-temp"> 13°</strong>
-                  <span class="low-temp"> 8°</span>
-                </div>
-              </div>
-            </div>
-          </div>
+          <div id="forecast"></div>
         </div>
         <div class="date-time" id="current-time"></div>
       </div>
